Fix wrong colors for menu on Mobile Safari

--- a/src/app.css
+++ b/src/app.css
@@ -809,8 +809,8 @@ button.carousel-dot:is(.active, [disabled].active) {
   padding: 8px 0 !important;
   margin: 0;
   font-size: 16px;
-  background-color: var(--bg-color);
-  border: 1px solid var(--outline-color);
+  background-color: var(--bg-color) !important;
+  border: 1px solid var(--outline-color) !important;
   border-radius: 8px;
   box-shadow: 0 0 8px var(--bg-faded-color), 0 4px 8px var(--bg-faded-color),
     0 2px 4px var(--bg-faded-color);
